requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-# PyTorch and related packages (using extra index URL)
-torch==1.13.0+cu117
-torchvision==0.14.0+cu117
-torchaudio==0.13.0+cu117
 --extra-index-url https://download.pytorch.org/whl/cu117
 
-# Standard Python packages
+torch
+torchvision
+torchaudio
 packaging
-timm==0.4.12
+timm
 pytest
 chardet
 yacs
 termcolor
 submitit
 tensorboardX
-triton==2.0.0
-
-# Specific CUDA + PyTorch builds (note: these need to be available or built manually if not on PyPI)
-causal_conv1d==1.0.0
-mamba_ssm==1.0.1
-
-# Scientific/ML packages
+triton
+causal_conv1d
+mamba_ssm
 scikit-learn
 matplotlib
 thop
@@ -27,4 +21,3 @@ h5py
 SimpleITK
 scikit-image
 medpy
-yacs
